Made library shared object Closed #24

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ SET(GCC_COVERAGE_COMPILE_FLAGS "-std=c++11 -g -Wall")
 SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
 
 # Now build our tools
-add_library(ssari ${PROJECT_SOURCES})
+add_library(ssari SHARED ${PROJECT_SOURCES})
 
 
 
