Added -fPIC flag for library suitability

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@
 # you will need to enable C++11 support
 # for your compiler.
 
-SET(GCC_COVERAGE_COMPILE_FLAGS "-std=c++11 -g -Wall")
+SET(GCC_COVERAGE_COMPILE_FLAGS "-std=c++11 -g -fPIC -Wall")
 SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
 
 # Now build our tools
